# gemini

./: a.json  pyproject.toml
src/: card_recognition.py  from_extracted_text.py  from_image.json  from_image.py  gemini_caching.py  nlp.py
src/data/: card_recognition_output.json  merry_cards_data_dump.json
