[tool.poetry]
name = "gemini"
version = "0.1.0"
description = ""
authors = ["Vitor José Stähelin <vitorjosestahelin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.8.3"
pytesseract = "^0.3.13"
pillow = "^11.0.0"
black = "^24.10.0"
ruff = "^0.7.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
